# kt

./: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak.1769184345
src-tauri/src/: main.rs
src/lib/components/: CategoryList.svelte  CategorySelector.svelte  ChaseImporter.svelte  CommonTransactionList.svelte  CompanyCsvImporter.svelte  CsvImporter.svelte  DonutChart.svelte  ExpenseReport.svelte  MonthClose.svelte  MonthDetail.svelte  MonthForm.svelte  MonthHistory.svelte  MonthList.svelte  PaymentGroupForm.svelte  PaymentGroupList.svelte  ResolveView.svelte  TransactionDropZone.svelte  TransactionForm.svelte  TransactionList.svelte  WeekClose.svelte  WeekDetail.svelte  WeekForm.svelte  WeekHistory.svelte  WeekList.svelte  index.ts
src/lib/models/: AppStore.svelte.ts  AuthStore.svelte.ts  Category.svelte.ts  CommonTransaction.svelte.ts  Month.svelte.ts  PaymentGroup.svelte.ts  Transaction.svelte.ts  Week.svelte.ts  index.ts
src/lib/services/: _old_jsonbin.ts  index.ts  initPocketbase.ts  jsonBinService.ts  pb.ts  pbService.ts
