[package]
name = "kt"
version = "1.0.0"
description = "KT (Keep Track) - A tracking application built with Tauri 2, Svelte 5, and shadcn-svelte."
authors = ["FLI-Golf"]
license = "MIT"
repository = "FLI-Golf/kt"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kt_lib"
path = "src/lib.rs"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
thiserror = "2.0.12"
